--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>DOM Exercise</title>
 </head>
 <body>
-  <h1>Hola Senpai</h1>
+  <h1 id="hello">Hola Senpai ¿como estan todos?</h1>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo ipsa numquam ipsum commodi, hic nostrum tempora. Totam eaque assumenda nostrum at. Labore, similique est natus maiores aut aliquam harum iusto!</p>
 </body>
 </html>
