Actualizando rama main

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1 id="hello">Hola Senpai ¿como estan todos?</h1>
+  <h2>Probando GIT</h2>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo ipsa numquam ipsum commodi, hic nostrum tempora. Totam eaque assumenda nostrum at. Labore, similique est natus maiores aut aliquam harum iusto!</p>
 </body>
 </html>
