Primer intento de carrito

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
-  <script src="./checkout/index.js"></script>
+  <script src="./index.js"></script>
   <title>DOM Exercise</title>
 </head>
 <body>
@@ -25,6 +25,9 @@
     </div>
     <div class="bg-red-300 w-1/2">
       Mi carrito
+      <div id="content-carrito">
+        
+      </div>
     </div>
   </div>
 </body>
