--- a/todo/index.html
+++ b/todo/index.html
@@ -26,6 +26,7 @@
     </div>
   </div>
   <script src="./src/task.js"></script>
+  <script src="./src/storage.js"></script>
   <script src="./src/index.js"></script>
 </body>
 </html>
