--- a/todo/index.html
+++ b/todo/index.html
@@ -12,7 +12,7 @@
   <div class="container mx-auto">
     <div class="h-12 mt-4 mb-4">
       <input id="search_input_task" placeholder="Palabra a buscar" type="text">
-      <button id="search_btn_task">
+      <button id="search_btn_task" onclick="search()">
         Buscar
       </button>
     </div>
